@@ -1,6 +1,9 @@
 
 Drupal 7.44, xxxx-xx-xx (development version)
 -----------------------
+- Fixed a regression introduced in Drupal 7.43 that allowed files uploaded by
+  anonymous users to be lost after form validation errors, and that also caused
+  regressions with certain contributed modules.
 
 Drupal 7.43, 2016-02-24
 -----------------------
